# rover_challeng

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/models/: command.py  rover.py
app/utils/: io_utils.py
tests/: test_rover.py
tests/command/: test_command.py
tests/rover/: test_rover.py
